# notebooklm-py

./: .gitignore  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: claude.yml  nightly.yml  publish-mcpb.yml  test.yml  verify-package.yml
backend/: .envrc  README.md  pyproject.toml
backend/src/notebooklm_api/: __init__.py  config.py  deps.py  main.py
backend/src/notebooklm_api/models/: __init__.py  artifacts.py  chat.py  notebooks.py  sources.py
backend/src/notebooklm_api/routes/: artifacts.py  chat.py  notebooks.py  sources.py
backend/tests/: conftest.py  test_auth.py  test_chat_routes.py
desktop-extension/: README.md  manifest.json  run_server.py
docs/: architecture.md  auth-cookie-lifecycle.md  cli-reference.md  configuration.md  conventions.md  deprecations.md  development.md  installation.md  mcp-guide.md  python-api.md  releasing.md  rpc-development.md  rpc-reference.md  session-method-retention.md  stability.md  test-suite-taxonomy-inventory.md  troubleshooting.md
docs/adr/: 0005-idempotency-taxonomy.md  0007-test-monkeypatch-policy.md  0009-middleware-chain.md  0026-mcp-studio-surface.md  README.md
examples/: video.py
mcp-server/: README.md  pyproject.toml
mcp-server/src/notebooklm_mcp/: __init__.py  config.py  oauth.py  remote.py  server.py  sse_server.py
mcp-server/tests/: test_oauth.py  test_remote.py  test_server.py
scripts/: add-ccb-bb-sources.sh  api-compat-allowlist.json  audit_public_api_compat.py
src/notebooklm/: __init__.py  _artifact_downloads.py  _artifacts.py  _capabilities.py  _chat.py  _client_composed.py  _client_metrics.py  _cookie_persistence.py  _core.py  _core_auth.py  _core_rpc.py  _error_injection.py  _idempotency.py  _idempotency_policy.py  _kernel.py  _logging.py  _loop_affinity.py  _middleware.py  _middleware_auth_refresh.py  _middleware_chain_host.py  _middleware_drain.py  _middleware_metrics.py  _middleware_retry.py  _middleware_semaphore.py  _mind_map.py  (+18 more)
tests/: conftest.py  vcr_config.py
(+203 files in other folders)
